--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,13 @@
 {
   "storage": {
     "rules": "storage.rules"
+  },
+  "hosting": {
+    "public": "views",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
